# ml-experiments

./: .gitignore  data.py  download_dataset.sh  model.py  params.py  train.py
annotated_improved_ddpm/: Architecture.txt  README.md  conv_1d.py  equiv_tests.py  equiv_tests_einops.py  my_unet.py  run_unet.py  unet.py
annotated_improved_ddpm/openai/: nn.py  unet.py
annotated_improved_ddpm/reimpl/: Diffusion.ipynb  diffusion.py  equiv_tests_diffusion.py  losses.py  nn.py  openai_diffusion.py
contrastive-learner/: contrastive_learner.py  distributed_ops.py  main.py
imagen/: .gitignore  dataloader.py  train.py
imagen-ffcv/scripts/: filter_images.py  make_ffcv_dataset.py  remove_images_without_tags.py
imagen-v2/: .gitignore  README.md  generate.py  install.sh  model_loader.py  profile.json  requirements.txt  streaming_dataloader.py  streaming_dataloader_v2.py  streaming_dataset.py  streaming_dataset_v2.py  train.py  vanilla_dataloader.py
imagen-v2/run_configs/: 1xv100.json
imagen-v2/scripts/: dataset_writer_utils.py  download_images.sh  download_posts.sh  duckdb_stats.py  export_duckdb.py  filter_corrupt_images.py  (+10 more)
imagen-v2/scripts/rust/file_ops/: Cargo.toml  README.md
imagen-v2/scripts/rust/file_ops/src/: main.old.rs  main.rs
modern_unet/: annotated_unet.py  asserts.py  einsum.py  pytorch_funcs.py  run_unet.py  unannotated_unet.py
transformer/: .gitignore  helpers.py  lightning_train.py  model.py  params.py  predict.py  template.py  train.py
unet/: .gitignore  README.md  data.py  lightning_train.py  loss.py  model.py  train.py  utils.py  validation.py
(+34 files in other folders)
