[package]
name = "file_ops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rio = "0.9.4"
tokio = { version = "1.20.0", features = ["full"] }
glob = "0.3.0"
anyhow = "1.0.58"
thiserror = "1.0.31"
futures = "0.3.21"